@@ -40,7 +40,7 @@
 <td>{{.ShortId}}</td>
 <td>{{.SigTime}}</td>
 <td>{{.ShortId}}</td>
-<td><a href="/pks/lookup?op=vindex&search=0x{{.LongId}}">{{.LongId}}</a></td>
+<td><a href="/pks/lookup?op=vindex&search=0x{{.LongId}}">{{.Uid}}</a></td>
 </tr>
 {{end}}
 
